--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,8 @@ div{
   height: 100%;
 }
 .App{
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: grid;
   grid-template-rows: 20% 80%;
 }
