--- a/src/Middle.css
+++ b/src/Middle.css
@@ -15,7 +15,13 @@
     .containerm{
         display: flex;
         justify-content: center;
-        align-items: center;
+        align-items: flex-start;
+        overflow: hidden;
+    }
+    .item4{
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
         overflow: hidden;
     }
     .pizza{
