--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,9 +1,20 @@
-@media screen and (min-width:600px) {
+@media screen and (max-height:500px) {
+    .containerf{
+      position:fixed;
+      height: 80vh;
+      width: 80vw;
+      left: 50%;
+      top:50%;
+      transform: translate(-50%,-40%);
+      background-color: white;
+  }
+  }
+@media screen and (min-width:950px) {
 
-.containerf{
-        position:absolute;
-        height: 50%;
-        width: 80%;
+    .containerf{
+        position:fixed;
+        height: 50vh;
+        width: 60vw;
         left: 50%;
         top:50%;
         transform: translate(-50%,-50%);
@@ -73,17 +84,9 @@
         height:60%;
     }
 }
-@media screen and (max-width:599px) {
+@media screen and (max-width:949px) {
 
-    .containerf{
-            position:absolute;
-            height: 50%;
-            width: 80%;
-            left: 50%;
-            top:50%;
-            transform: translate(-50%,-40%);
-            background-color: white;
-        }
+   
         .item5{
             height: 100%;
             display: flex;
@@ -147,4 +150,9 @@
             width: 80%;
             height:60%;
         }
-    }
+ }
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+         -webkit-appearance: none;
+         margin: 0;
+}
