--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,33 @@
+@media screen and (max-height:500px) {
+  body{
+    height: 150vh;
+  }
+  .containerf{
+    position:fixed;
+    height: 100vh;
+    width: 80vw;
+    left: 50%;
+    top:50%;
+    transform: translate(-50%,-40%);
+    background-color: gray;
+}
+}
 *{
   box-sizing: border-box;
 }
-body {
-  width: 98vw;
-  height: 98vh;
+@media screen and (min-height:500px) {
+  
+  body {
+    width: 98vw;
+    height: 98vh;
 
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
