--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,24 +1,8 @@
-@media screen and (max-height:500px) {
-    .containerf{
-      position:fixed;
-      height: 80vh;
-      width: 80vw;
-      left: 50%;
-      top:50%;
-      transform: translate(-50%,-40%);
-      background-color: white;
-  }
-  }
-@media screen and (min-width:950px) {
+
+@media screen and (min-width:600px) {
 
     .containerf{
-        position:fixed;
-        height: 50vh;
-        width: 60vw;
-        left: 50%;
-        top:50%;
-        transform: translate(-50%,-50%);
-        background-color: white;
+        background-color: red;
     }
     .item5{
         height: 100%;
@@ -84,8 +68,11 @@
         height:60%;
     }
 }
-@media screen and (max-width:949px) {
-
+@media screen and (max-width:599px) {
+    
+    .containerf{
+        background-color: white;
+    }
    
         .item5{
             height: 100%;
