--- a/src/Footer.css
+++ b/src/Footer.css
@@ -2,7 +2,7 @@
 @media screen and (min-width:600px) {
 
     .containerf{
-        background-color: red;
+        background-color: white;
     }
     .item5{
         height: 100%;
