--- a/src/Header.css
+++ b/src/Header.css
@@ -9,16 +9,7 @@
     justify-content: center;
     align-items: center;
 }
-.humberger{ 
-    height:60%;
-    width:60%;
-    border:none;
-}
-p{  
-    height: 10%;
-    width: 100%;
-    background-color: black;
-}
+
 .item2{
 
     grid-column-start: 2;
@@ -26,9 +17,6 @@ p{
     display: flex;
     justify-content: center;
     align-items: center;
-}      
-.manny{
-    height:50px;
 } 
 .item3{
     grid-column-start: 3;
@@ -47,12 +35,8 @@ p{
     grid-column-end: 5;
     display: flex;
     justify-content: flex-start;
-    align-items: flex-end; 
-}  
-.cart{
-    width: 50%;
-    height: auto;
-}
+    align-items: center; 
+} 
 .total{
     position: relative;
     top:-40px;
@@ -69,4 +53,11 @@ p{
     justify-content: center;
     align-items: center;
     padding-bottom: 10px;
+}
+@media screen and (max-width:650px) {
+    #bars{
+        width:100%;
+        height: auto;
+    }
+    
 }
