--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
 @media screen and (max-height:500px) {
-  body{
+  body {
     height: 150vh;
+
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
   }
 }
 *{
