--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,28 @@
 div{
+  border: 1px solid red;
   width: 100%;
   height: 100%;
 }
-.App{
+.Apphome{
   width: 100%;
   height: 100%;
   display: grid;
   grid-template-rows: 20% 80%;
+  grid-template-columns: 100%;
 }
+.Apporder {
+  width: 100%;
+  display: grid;
+  grid-template-rows: 175.6px 87.8px 176.8px auto;
+  grid-template-columns: 100%;
+}
+
 .header{
   grid-row-start: 1;
   grid-row-end: 2;
 }
 .middle{
+  grid-column-start: 1;
   grid-row-start: 2;
   grid-row-end: 3;
   overflow: hidden;
@@ -27,6 +37,7 @@ div{
     transform: translate(-50%,-50%);
   }
 }
+
 
 @media screen and (max-width: 599px){
   .footer{
@@ -49,4 +60,28 @@ div{
     transform: translate(-50%,-50%);
   }
     
+}
+
+.sideScroll{
+  grid-column-start: 1;
+  grid-row-start: 2;
+  grid-row-end: 3;
+  display: flex;
+  align-items: center;
+}
+.deliver{
+  grid-column-start: 1;
+  grid-row-start: 2;
+  grid-row-start: 3;
+  display: flex;
+  align-items: center;
+}
+.cart{
+  position: fixed;
+  height:10%;
+  width: 100%;
+  bottom: 0%;
+  left:0px;
+  display: flex;
+  align-items: center;
 }
