--- a/src/Header.css
+++ b/src/Header.css
@@ -1,4 +1,5 @@
 .containerh{
+    height: 100%;
     display: grid;
     grid-template-columns: 15% 15% auto 25%;
 }
@@ -19,6 +20,8 @@
     align-items: center;
 } 
 .item3{
+    height: 100%;
+    width: auto;
     grid-column-start: 3;
     grid-column-end: 4;
     display: flex;
@@ -26,9 +29,8 @@
     align-items: center;
 }    
 .logo{
-    max-width: 70%;
-    min-width: none;
-    height:auto;
+    height: auto;
+    width:33%;
 }
 .item44{
     grid-column-start: 4;
@@ -53,6 +55,13 @@
     justify-content: center;
     align-items: center;
     padding-bottom: 10px;
+}
+@media screen and (min-width:649px) {
+    #bars{
+        width:60%;
+        height: auto;
+    }
+    
 }
 @media screen and (max-width:650px) {
     #bars{
