--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @media screen and (max-height:500px) {
   body {
     height: 150vh;
+    width: 100vw;
 
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
       'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -8,6 +9,7 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
+  
 }
 *{
   box-sizing: border-box;
