--- a/src/Cart.css
+++ b/src/Cart.css
@@ -1,7 +1,8 @@
 .cartContainer{
     display: flex;
     justify-content: space-between;
-    align-items: center;;
+    align-items: center;
+    background-color: white;
     
 }
 .cartCommander {
