--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 div{
-  border: 1px solid red;
   width: 100%;
   height: 100%;
 }
@@ -82,6 +81,14 @@ div{
   width: 100%;
   bottom: 0%;
   left:0px;
+  display: flex;
+  align-items: center;
+}
+
+.item{
+  grid-column-start: 1;
+  grid-row-start: 3;
+  grid-row-start: 4;
   display: flex;
   align-items: center;
 }
