--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,11 @@ div{
   width: 100%;
   height: 100%;
 }
+
 .Apphome{
   width: 100%;
   height: 100%;
+  margin-right: 10%;
   display: grid;
   grid-template-rows: 20% 80%;
   grid-template-columns: 100%;
